Added the HTMX library to Django.

--- a/party/templates/party/base.html
+++ b/party/templates/party/base.html
@@ -1,10 +1,12 @@
 <!--party/templates/party/base.html-->
 
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Party!</title>
+    <script type="text/javascript" src="{% static '/party/js/htmx.min.js' %}"></script>
 </head>
 <body>
 <main>
